--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orcl12c
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.url=jdbc:oracle:thin:@//oraasswd08-scan.nam.nsroot.net:8888/CTSHB1D
+spring.datasource.username=cop_dbo_ld
+spring.datasource.password=COPDBOLDD12014
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
